# api-docs.json
@@ -15,14 +15,24 @@
     }
   ],
   "paths": {
-    "/api/v1/livro/alterar": {
+    "/api/v1/livro/alterar/{id}": {
       "put": {
         "tags": [
           "livro-controller"
         ],
         "description": "Método utilizado para altlerar os dados de um livro",
         "operationId": "alterar",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -128,14 +138,14 @@
         "description": "Listagem Geral dos livros",
         "operationId": "listAll",
         "responses": {
-          "200": {
-            "description": "Listagem de livros",
+          "400": {
+            "description": "Nao encontrado",
             "content": {
               "application/json": {}
             }
           },
-          "400": {
-            "description": "Nao encontrado",
+          "200": {
+            "description": "Listagem de livros",
             "content": {
               "application/json": {}
             }
